--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   max-width: 1000px;
   margin: 0 auto;
   justify-content: space-between;
-  margin-top: 20px;
 }
 
 .header-box nav ul li {
@@ -30,7 +29,6 @@ nav ul li img {
 }
 
 .header-container {
-  position: absolute;
   background: rgb(57, 56, 57);
   background: linear-gradient(
     0deg,
@@ -88,7 +86,6 @@ button {
   border-radius: 5px;
   border: solid 1px white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  
 }
 
 #btn-buybeat {
@@ -109,4 +106,54 @@ button {
   font-size: 14px;
   color: #ffffff;
   text-shadow: 0px 4px 4px rgba(199, 199, 199, 0.25);
+}
+
+/* Section */
+
+.section-container {
+  max-width: 1000px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.section-container h3 {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 48px;
+  color: #ffffff;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 15px 30px;
+  background: #e43333;
+  box-shadow: 0px 2px 10px 5px rgba(255, 0, 0, 0.5);
+  border-radius: 12px;
+}
+
+.tittle-box {
+  text-align: center;
+  justify-content: center;
+  display: flex;
+}
+
+p {
+  position: relative;
+  font-style: normal;
+  font-weight: 300;
+
+  line-height: 30px;
+  text-align: center;
+  color: #f2f2f2;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 20px;
+  max-width: 1000px;
+  font-size: 2.0rem;
+  margin: 0 auto;
+  padding: 20px;
+  
+}
+
+.p-about {
+  position: absolute;
+  background: rgba(228, 51, 51, 0.19);
+  width: 100%;
+  left: 0;
 }
