--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,7 @@ button {
   max-width: 1000px;
   margin: 0 auto;
   justify-content: center;
+  
 }
 
 .section-container h3 {
@@ -138,11 +139,10 @@ p {
   position: relative;
   font-style: normal;
   font-weight: 300;
-
   line-height: 30px;
   text-align: center;
   color: #f2f2f2;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.55);
   margin-bottom: 20px;
   max-width: 1000px;
   font-size: 2.0rem;
@@ -156,4 +156,16 @@ p {
   background: rgba(228, 51, 51, 0.19);
   width: 100%;
   left: 0;
+}
+
+.section-music{
+  margin-top: 300px;
+
+}
+
+.music-container{
+    position: absolute;
+    background: rgba(228, 51, 51, 0.19);
+    width: 100%;
+    left: 0;
 }
