--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,6 @@ button {
   max-width: 1000px;
   margin: 0 auto;
   justify-content: center;
-  
 }
 
 .section-container h3 {
@@ -145,10 +144,9 @@ p {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.55);
   margin-bottom: 20px;
   max-width: 1000px;
-  font-size: 2.0rem;
+  font-size: 2rem;
   margin: 0 auto;
   padding: 20px;
-  
 }
 
 .p-about {
@@ -158,14 +156,12 @@ p {
   left: 0;
 }
 
-.section-music{
+.section-music {
   margin-top: 300px;
-
+  text-align: center;
 }
 
-.music-container{
-    position: absolute;
-    background: rgba(228, 51, 51, 0.19);
-    width: 100%;
-    left: 0;
+.player {
+  height: 250px;
+  padding: 0 15px;
 }
