--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   max-width: 1000px;
   margin: 0 auto;
   justify-content: space-between;
+  padding-top: 25px;
 }
 
 .header-box nav ul li {
@@ -14,9 +15,9 @@
   list-style: none;
 }
 
-.menu {
+/* .menu {
   margin-right: 200px;
-}
+} */
 
 nav {
   display: flex;
@@ -37,29 +38,28 @@ nav ul li img {
     rgba(88, 88, 88, 0.8687850140056023) 100%
   );
   width: 100%;
-  height: 500px;
+  height: 50vh;
+  border-bottom: 3px solid #e43333;
 }
 
 .banner-box {
   display: flex;
   max-width: 1000px;
   margin: 0 auto;
-  justify-content: space-between;
   margin-top: 50px;
-  align-items: center;
 }
 
 .banner-box h1 {
   display: inline;
-  font-family: "Bungee";
-  font-weight: 400;
-  font-size: 4.5rem;
+
+  font-size: 4.5em;
   color: #ffffff;
   text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.55);
 }
 .banner-box h2 {
   position: relative;
-  top: -75px;
+  margin-top: 0;
+
   left: 2px;
   font-family: "Raleway";
   font-weight: 300;
@@ -111,7 +111,6 @@ button {
 /* Section */
 
 .section-container {
-  max-width: 1000px;
   margin: 0 auto;
   justify-content: center;
 }
@@ -144,7 +143,7 @@ p {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.55);
   margin-bottom: 20px;
   max-width: 1000px;
-  font-size: 2rem;
+  font-size: 1.2em;
   margin: 0 auto;
   padding: 20px;
 }
@@ -157,11 +156,43 @@ p {
 }
 
 .section-music {
-  margin-top: 300px;
   text-align: center;
+  margin: 300px auto;
+  max-width: 1000px;
 }
 
-.player {
-  height: 250px;
-  padding: 0 15px;
+.player-desktop {
+  height: 300px;
+  padding: 0 10px;
+
+}
+
+.slider-music-mobile {
+ 
+  display: inline-flex;
+  text-align: center;
+  align-items: center;
+  align-self: center;
+
+}
+
+.icons-music {
+  color: white;
+  margin-bottom: 20% ;
+  padding-left: 10px;
+  padding-right: 10px;
+ 
+}
+@media (max-width: 650px) {
+  .header-box {
+    padding: 20px;
+  }
+  .banner-box {
+    padding: 20px;
+  }
+  .player {
+    width: 100%;
+    height: 300px;
+    text-align: center;
+  }
 }
