--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,15 @@ code {
   border: 1px solid #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+#btn-buymusic:hover {
+  background-color: red;
+  transition: 0.2s;
+  transform: scale(1.05);
+}
+
+#btn-buybeat:hover {
+  background: none;
+  transition: 0.2s;
+  transform: scale(1.05);
+}
