--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,7 @@ button {
   display: flex;
 }
 
-p {
+.p-container {
   position: relative;
   font-style: normal;
   font-weight: 300;
@@ -164,25 +164,121 @@ p {
 .player-desktop {
   height: 300px;
   padding: 0 10px;
-
 }
 
 .slider-music-mobile {
- 
   display: inline-flex;
   text-align: center;
   align-items: center;
   align-self: center;
-
 }
 
 .icons-music {
   color: white;
-  margin-bottom: 20% ;
+  margin-bottom: 20%;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+/* .SectionCard {
+  background-color: blue;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+
+.services-card img {
+  position: absolute;
+}
+
+.services-card{
+  
+  padding-top: 50px;
+ 
+
+}
+
+.p-card {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.5em;
+  color: #cbcbcb;
+  position: relative;
+  margin-top: 5px;
+
  
 }
+
+.h1-card {
+  font-family: "Roboto";
+  font-style: normal;
+  font-size: 2.5em;
+  color: #eaeaea;
+
+
+ 
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.card-text {
+  margin-left: 100px;
+  max-width: 500px;
+}
+ */
+
+.SectionContainer {
+  background-color: red;
+
+  text-align: center;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1000px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.grid img {
+  float: left;
+}
+
+.grid h1 {
+  float: left;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 2em;
+  color: #eaeaea;
+}
+.grid p {
+  display: inline-block;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.5em;
+
+  text-align: start;
+  margin-top: 0;
+
+  color: #cbcbcb;
+}
+
+.text-card-box {
+  display: block;
+  max-width: 100%;
+  margin-left: 15%;
+  padding: 0;
+}
+
+.item {
+  margin: 5px;
+  background: tomato;
+  text-align: center;
+}
+
 @media (max-width: 650px) {
   .header-box {
     padding: 20px;
@@ -194,5 +290,18 @@ p {
     width: 100%;
     height: 300px;
     text-align: center;
+  }
+  .services-card {
+    padding-top: 50px;
+  }
+
+  .SectionCard {
+    display: grid;
+    max-width: 100%;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
   }
 }
